@@ -93,7 +93,6 @@ import com.intellij.openapi.editor.colors.impl.EditorColorsManagerImpl;
 import com.intellij.openapi.editor.elf.Elf;
 import com.intellij.openapi.editor.elf.ElfFeatureFlag;
 import com.intellij.openapi.editor.event.CaretEvent;
-import com.intellij.openapi.editor.event.DocumentListener;
 import com.intellij.openapi.editor.event.CaretListener;
 import com.intellij.openapi.editor.event.DocumentEvent;
 import com.intellij.openapi.editor.event.EditorMouseEvent;
@@ -122,6 +121,9 @@ import com.intellij.openapi.editor.ex.util.EditorUtil;
 import com.intellij.openapi.editor.ex.util.EmptyEditorHighlighter;
 import com.intellij.openapi.editor.highlighter.EditorHighlighter;
 import com.intellij.openapi.editor.highlighter.HighlighterClient;
+import com.intellij.openapi.editor.impl.caret.EditorCaretMutator;
+import com.intellij.openapi.editor.impl.caret.model.CaretCursorSnapshot;
+import com.intellij.openapi.editor.impl.caret.model.CaretRectangle;
 import com.intellij.openapi.editor.impl.event.MarkupModelListener;
 import com.intellij.openapi.editor.impl.stickyLines.StickyLinesManager;
 import com.intellij.openapi.editor.impl.stickyLines.StickyLinesModel;
@@ -130,18 +132,10 @@ import com.intellij.openapi.editor.impl.stickyLines.ui.StickyLineColors;
 import com.intellij.openapi.editor.impl.stickyLines.ui.StickyLineShadowBorder;
 import com.intellij.openapi.editor.impl.stickyLines.ui.StickyLineShadowPainter;
 import com.intellij.openapi.editor.impl.stickyLines.ui.StickyLinesPanel;
-import com.intellij.openapi.editor.impl.caret.CaretAnimationConditions;
-import com.intellij.openapi.editor.impl.caret.CaretAnimationHost;
-import com.intellij.openapi.editor.impl.caret.CaretGeometry;
-import com.intellij.openapi.editor.impl.caret.CaretPresentation;
-import com.intellij.openapi.editor.impl.caret.EditorCaretMutator;
-import com.intellij.openapi.editor.impl.caret.EditorCaretMutatorFactory;
-import com.intellij.openapi.editor.impl.caret.model.CaretAnimationSettings;
-import com.intellij.openapi.editor.impl.caret.model.CaretPlacement;
-import com.intellij.openapi.editor.impl.caret.model.CaretRectangle;
 import com.intellij.openapi.editor.impl.view.CharacterGrid;
 import com.intellij.openapi.editor.impl.view.CharacterGridImpl;
 import com.intellij.openapi.editor.impl.view.EditorView;
+import com.intellij.openapi.editor.impl.view.animation.EditorAnimationCache;
 import com.intellij.openapi.editor.markup.GutterDraggableObject;
 import com.intellij.openapi.editor.markup.GutterIconRenderer;
 import com.intellij.openapi.editor.markup.RangeHighlighter;
@@ -223,6 +217,7 @@ import com.intellij.util.ui.TimerUtil;
 import com.intellij.util.ui.UIUtil;
 import com.intellij.util.ui.update.UiNotifyConnector;
 import kotlin.Unit;
+import kotlinx.coroutines.CoroutineScope;
 import org.intellij.lang.annotations.MagicConstant;
 import org.jetbrains.annotations.ApiStatus;
 import org.jetbrains.annotations.Contract;
@@ -364,6 +359,7 @@ public final class EditorImpl extends UserDataHolderBase implements EditorEx, Hi
   boolean myCursorSetExternally;
 
   private boolean myIsCurrentlyBuildingCache = false;
+  private final @Nullable EditorAnimationCache myContentAnimationCache;
   private final @NotNull EditorCaretMutator caretMutator;
 
   private static final Integer SCROLL_PANE_LAYER = 0;
@@ -393,7 +389,6 @@ public final class EditorImpl extends UserDataHolderBase implements EditorEx, Hi
   private final List<EditorMouseListener> myMouseListeners = ContainerUtil.createLockFreeCopyOnWriteList();
   private final @NotNull List<EditorMouseMotionListener> myMouseMotionListeners = ContainerUtil.createLockFreeCopyOnWriteList();
 
-  final @NotNull CaretCursor myCaretCursor;
   private final ScrollingTimer myScrollingTimer = new ScrollingTimer();
 
   private final @NotNull SettingsImpl mySettings;
@@ -503,6 +498,7 @@ public final class EditorImpl extends UserDataHolderBase implements EditorEx, Hi
 
   private final EditorSizeAdjustmentStrategy mySizeAdjustmentStrategy = new EditorSizeAdjustmentStrategy();
   private final Disposable myDisposable = Disposer.newDisposable();
+  private final CoroutineScope myCoroutineScope;
 
   private List<CaretState> myCaretStateBeforeLastPress;
   LogicalPosition myLastMousePressedLocation;
@@ -584,12 +580,13 @@ public final class EditorImpl extends UserDataHolderBase implements EditorEx, Hi
     myProject = project;
     myDocument = (DocumentEx)document;
     myElfDocument = ElfFeatureFlag.isEnabled() ? (DocumentEx)Elf.getElf().getElfDocument(document) : myDocument;
+    myCoroutineScope = EditorCoroutineScopes.createEditorScope(myProject, myDisposable);
     myVirtualFile = file;
     myState = new EditorState();
     myState.refreshAll();
     final EditorColorsScheme boundColorScheme = createBoundColorSchemeDelegate(null);
-    if (boundColorScheme instanceof EditorColorSchemeDelegate) {
-      myScheme = (EditorColorSchemeDelegate)boundColorScheme;
+    if (boundColorScheme instanceof EditorColorSchemeDelegate delegate) {
+      myScheme = delegate;
     }
     else {
       LOG.warn("createBoundColorSchemeDelegate created delegate of type '%s'. Will wrap it with MyColorSchemeDelegate".formatted(boundColorScheme.getClass()),
@@ -654,15 +651,8 @@ public final class EditorImpl extends UserDataHolderBase implements EditorEx, Hi
     };
 
     myIndentsModel = new IndentsModelImpl(this);
-    myCaretCursor = new CaretCursor();
-    caretMutator = EditorCaretMutatorFactory.createMutator(createCaretAnimationHost(), toString());
+    caretMutator = new EditorCaretMutator(this);
     Disposer.register(myDisposable, caretMutator);
-    myDocument.addDocumentListener(new DocumentListener() {
-      @Override
-      public void bulkUpdateStarting(@NotNull Document document) {
-        caretMutator.bulkUpdateStarting();
-      }
-    }, myDisposable);
 
     myState.setVerticalScrollBarOrientation(VERTICAL_SCROLLBAR_RIGHT);
 
@@ -704,6 +694,12 @@ public final class EditorImpl extends UserDataHolderBase implements EditorEx, Hi
     myEditorModel = new EditorModelImpl(this);
 
     myView = new EditorView(this, myEditorModel);
+    myContentAnimationCache = Registry.is("editor.animation.cache.enabled")
+                              ? new EditorAnimationCache(this)
+                              : null;
+    if (myContentAnimationCache != null) {
+      Disposer.register(myDisposable, myContentAnimationCache);
+    }
 
     myTextDrawingCallback = new EditorTextDrawingCallback(myView);
 
@@ -724,7 +720,7 @@ public final class EditorImpl extends UserDataHolderBase implements EditorEx, Hi
     updateCaretCursor();
 
     if (!ApplicationManager.getApplication().isHeadlessEnvironment() && SystemInfoRt.isMac && SystemInfo.isJetBrainsJvm) {
-      MacGestureSupportInstaller.installOnComponent(getComponent(), e -> myForcePushHappened = true);
+      MacGestureSupportInstaller.installOnComponent(getComponent(), _ -> myForcePushHappened = true);
     }
 
     myPopupHandlers.add(new DefaultPopupHandler());
@@ -891,7 +887,7 @@ public final class EditorImpl extends UserDataHolderBase implements EditorEx, Hi
                             " virtualSpace=" + EditorCoreUtil.inVirtualSpace(this, myLastMousePressedLocation) +
                             " opposite=" + (e.getOppositeComponent() == null ? "null" : e.getOppositeComponent().getClass().getSimpleName()));
     }
-    myCaretCursor.setVisible(true);
+    caretMutator.setVisible(true);
     gainedFocus.set(true);
 
     for (Caret caret : myCaretModel.getAllCarets()) {
@@ -940,7 +936,7 @@ public final class EditorImpl extends UserDataHolderBase implements EditorEx, Hi
 
     myFocusKeepSelectionOnMousePress = false;
     mySelectionModel.reinitSettings();
-    myView.invalidateContentAnimationCache(null);
+    invalidateAnimationCaches(null);
 
     clearCaretThread();
     for (Caret caret : myCaretModel.getAllCarets()) {
@@ -1203,12 +1199,11 @@ public final class EditorImpl extends UserDataHolderBase implements EditorEx, Hi
     return EditorThreading.compute(() -> myView.getPrefixTextWidthInPixels()).intValue();
   }
 
+  @RequiresEdt
   @Override
   public void setPrefixTextAndAttributes(@Nullable String prefixText, @Nullable TextAttributes attributes) {
-    EditorThreading.run(() -> {
-      mySoftWrapModel.recalculate("prefix changed");
-      myView.setPrefix(prefixText, attributes);
-    });
+    mySoftWrapModel.recalculate("prefix changed");
+    myView.setPrefix(prefixText, attributes);
   }
 
   @Override
@@ -1472,9 +1467,10 @@ public final class EditorImpl extends UserDataHolderBase implements EditorEx, Hi
     mySoftWrapModel.reinitSettings();
     myCaretModel.reinitSettings();
     mySelectionModel.reinitSettings();
-    caretMutator.reinitSettings();
 
     myView.reinitSettings();
+    // After the view, because the mutator adopts the caret measurements that the view reinit recomputes.
+    caretMutator.reinitSettings();
     myFoldingModel.refreshSettings();
     myFoldingModel.rebuild();
     myInlayModel.reinitSettings();
@@ -1517,6 +1513,11 @@ public final class EditorImpl extends UserDataHolderBase implements EditorEx, Hi
     myTraceableDisposable.throwDisposalError(msg);
   }
 
+  @ApiStatus.Internal
+  public String getDisposalStackTrace() {
+    return myTraceableDisposable.getStackTrace();
+  }
+
   private final Object NON_RELEASABLE_BLOCK_GUARD = ObjectUtils.sentinel("NON_RELEASABLE_BLOCK_GUARD");
 
   /**
@@ -1541,6 +1542,11 @@ public final class EditorImpl extends UserDataHolderBase implements EditorEx, Hi
       myTraceableDisposable.kill(null);
 
       isReleased = true;
+      // Stop background frames before the editor models they read are disposed.
+      Disposer.dispose(caretMutator);
+      if (myContentAnimationCache != null) {
+        Disposer.dispose(myContentAnimationCache);
+      }
       myDisposalTimestampNanos = System.nanoTime();
       mySizeAdjustmentStrategy.cancelAllRequests();
       cancelAutoResetForMouseSelectionState();
@@ -1678,7 +1684,7 @@ public final class EditorImpl extends UserDataHolderBase implements EditorEx, Hi
       LOG.error(e);
     }
     // update area available for soft wrapping on the component shown/hidden
-    myPanel.addHierarchyListener(e -> mySoftWrapModel.getApplianceManager().updateAvailableArea());
+    myPanel.addHierarchyListener(_ -> mySoftWrapModel.getApplianceManager().updateAvailableArea());
 
     myPanel.addComponentListener(new ComponentAdapter() {
       @DirtyUI
@@ -1688,7 +1694,7 @@ public final class EditorImpl extends UserDataHolderBase implements EditorEx, Hi
         myMarkupModel.repaint();
         if (!isRightAligned()) return;
         updateCaretCursor();
-        myCaretCursor.repaint();
+        repaintCaretCursorSnapshot();
       }
     });
   }
@@ -1957,7 +1963,7 @@ public final class EditorImpl extends UserDataHolderBase implements EditorEx, Hi
     Object oldValue = extractOldValueOrLog(event, false);
     myPropertyChangeSupport.firePropertyChange(PROP_INSERT_MODE, oldValue, event.getNewValue());
 
-    myCaretCursor.repaint();
+    repaintCaretCursorSnapshot();
   }
 
   @Override
@@ -2452,25 +2458,6 @@ public final class EditorImpl extends UserDataHolderBase implements EditorEx, Hi
   }
 
   /**
-   * Sets a callback invoked after every repaint request.
-   * <p>
-   *   The callback is only invoked if the component is showing and the request has a non-empty rectangle.
-   *   In other words, it's invoked when the repaint request is likely to be followed by an actual painting operation.
-   * </p>
-   * <p>
-   *   The callback must be fast, non-intrusive, and should not throw any exceptions.
-   * </p>
-   * <p>
-   *   This is an internal hack, which is why it doesn't follow the usual add-listener pattern.
-   * </p>
-   * @param callback the callback, {@code null} removes the callback
-   */
-  @ApiStatus.Internal
-  public void setRepaintCallback(@Nullable Runnable callback) {
-    myEditorComponent.setRepaintCallback(callback);
-  }
-
-  /**
    * Sets a callback invoked after every paint operation.
    * <p>
    *   The callback must be fast, non-intrusive, and should not throw any exceptions.
@@ -2495,9 +2482,24 @@ public final class EditorImpl extends UserDataHolderBase implements EditorEx, Hi
     myIsCurrentlyBuildingCache = isCurrentlyBuildingCache;
   }
 
+  /**
+   * Drops the cached content behind {@code clip}, or all of it when {@code clip} is {@code null}.
+   */
   @ApiStatus.Internal
   public void invalidateAnimationCaches(@Nullable Rectangle clip) {
-    myView.invalidateContentAnimationCache(clip);
+    if (myContentAnimationCache != null) {
+      myContentAnimationCache.invalidate(clip);
+    }
+  }
+
+  /**
+   * Asks the animation cache to hold the content behind {@code locations}, so the frames that follow can be blitted.
+   */
+  @ApiStatus.Internal
+  public void prefetchCaretFrames(@NotNull List<CaretRectangle> locations) {
+    if (myContentAnimationCache != null) {
+      myContentAnimationCache.cacheCaretFrames(locations);
+    }
   }
 
   @Override
@@ -2637,7 +2639,7 @@ public final class EditorImpl extends UserDataHolderBase implements EditorEx, Hi
       return;
     }
 
-    myView.paint(g);
+    myView.paint(g, canPaintFromContentAnimationCache() ? myContentAnimationCache : null);
 
     boolean isBackgroundImageSet = IdeBackgroundUtil.isEditorBackgroundImageSet(myProject);
     if (myBackgroundImageSet != isBackgroundImageSet) {
@@ -2645,6 +2647,13 @@ public final class EditorImpl extends UserDataHolderBase implements EditorEx, Hi
       updateOpaque(myScrollPane.getHorizontalScrollBar());
       updateOpaque(myScrollPane.getVerticalScrollBar());
     }
+  }
+
+  private boolean canPaintFromContentAnimationCache() {
+    return !isCurrentlyBuildingCache() &&
+           !isStickyLinePainting() &&
+           !isPaintingDumbBuffer() &&
+           !isPurePaintingMode();
   }
 
   @NotNull Color getDisposedBackground() {
@@ -2820,10 +2829,10 @@ public final class EditorImpl extends UserDataHolderBase implements EditorEx, Hi
            + ", soft wraps: " + (mySoftWrapModel.isSoftWrappingEnabled() ? "on" : "off")
            + ", caret model: " + getCaretModel().dumpState()
            + ", soft wraps data: " + getSoftWrapModel().dumpState()
-           + "\ncustom wraps data: " + ((myCustomWrapModel instanceof CustomWrapModelImpl) ? ((CustomWrapModelImpl)myCustomWrapModel).dumpState() : myCustomWrapModel.toString())
+           + "\ncustom wraps data: " + ((myCustomWrapModel instanceof CustomWrapModelImpl model) ? model.dumpState() : myCustomWrapModel.toString())
            + "\n\nfolding data: " + getFoldingModel().dumpState()
            + "\ninlay model: " + getInlayModel().dumpState()
-           + (myDocument instanceof DocumentImpl ? "\n\ndocument info: " + ((DocumentImpl)myDocument).dumpState() : "")
+           + (myDocument instanceof DocumentImpl document ? "\n\ndocument info: " + document.dumpState() : "")
            + "\nfont preferences: " + myScheme.getFontPreferences()
            + "\npure painting mode: " + myPurePaintingMode
            + "\ninsets: " + myEditorComponent.getInsets()
@@ -2832,7 +2841,14 @@ public final class EditorImpl extends UserDataHolderBase implements EditorEx, Hi
 
   @ApiStatus.Internal
   public CaretRectangle @Nullable [] getCaretLocations(boolean onlyIfShown) {
-    return myCaretCursor.getCaretLocations(onlyIfShown);
+    CaretCursorSnapshot snapshot = getCaretCursorSnapshot(onlyIfShown);
+    return snapshot == null ? null : snapshot.locations;
+  }
+
+  @ApiStatus.Internal
+  public @Nullable CaretCursorSnapshot getCaretCursorSnapshot(boolean onlyIfShown) {
+    CaretCursorSnapshot snapshot = caretMutator.snapshot();
+    return onlyIfShown && !isCaretShown(snapshot) ? null : snapshot;
   }
 
   @Override
@@ -3477,8 +3493,7 @@ public final class EditorImpl extends UserDataHolderBase implements EditorEx, Hi
 
   private int validateOffset(int offset) {
     if (offset < 0) return 0;
-    if (offset > getElfDocument().getTextLength()) return getElfDocument().getTextLength();
-    return offset;
+    return Math.min(offset, getElfDocument().getTextLength());
   }
 
   void clearDnDContext() {
@@ -3524,9 +3539,9 @@ public final class EditorImpl extends UserDataHolderBase implements EditorEx, Hi
 
   private @NotNull Caret getLeadCaret() {
     List<Caret> allCarets = myCaretModel.getAllCarets();
-    Caret firstCaret = allCarets.get(0);
+    Caret firstCaret = allCarets.getFirst();
     if (firstCaret == myCaretModel.getPrimaryCaret()) {
-      return allCarets.get(allCarets.size() - 1);
+      return allCarets.getLast();
     }
     return firstCaret;
   }
@@ -3561,87 +3576,21 @@ public final class EditorImpl extends UserDataHolderBase implements EditorEx, Hi
 
   void updateCaretCursor() {
     myUpdateCursor = true;
-    if (myCaretCursor.isActive()) {
-      myCaretCursor.setStartTime(System.currentTimeMillis());
+    if (caretMutator.snapshot().isShown) {
+      caretMutator.recordActivity();
     }
     else {
-      myCaretCursor.setFullOpacity();
-      myCaretCursor.repaint();
+      caretMutator.showFullyOpaque();
+      repaintCaretCursorSnapshot();
     }
   }
 
-  private @NotNull CaretAnimationHost createCaretAnimationHost() {
-    return new CaretAnimationHost(
-      createCaretGeometry(),
-      createCaretPresentation(),
-      createCaretAnimationConditions(),
-      (key, locations) -> EditorCaretAdapter.prefetchCaretFrames(this, key, locations)
-    );
+  private void repaintCaretCursorSnapshot() {
+    myView.repaintCarets(caretMutator.snapshot());
   }
 
-  private @NotNull CaretGeometry createCaretGeometry() {
-    return new CaretGeometry() {
-      @Override
-      public @NotNull List<CaretPlacement> placements() {
-        return EditorCaretAdapter.caretPlacements(EditorImpl.this);
-      }
-
-      @Override
-      public CaretRectangle @NotNull [] currentLocations() {
-        return myCaretCursor.locations();
-      }
-    };
-  }
-
-  private @NotNull CaretPresentation createCaretPresentation() {
-    return new CaretPresentation() {
-      @Override
-      public void showAt(CaretRectangle @NotNull [] locations) {
-        myCaretCursor.setPositions(locations);
-      }
-
-      @Override
-      public void fadeTo(float opacity) {
-        myCaretCursor.setBlinkOpacity(opacity);
-      }
-
-      @Override
-      public void repaint(CaretRectangle @NotNull [] locations) {
-        myCaretCursor.repaint(locations);
-      }
-
-      @Override
-      public void repaintCurrent() {
-        myCaretCursor.repaint();
-      }
-    };
-  }
-
-  private @NotNull CaretAnimationConditions createCaretAnimationConditions() {
-    return new CaretAnimationConditions() {
-      @Override
-      public boolean isCaretShown() {
-        return myCaretCursor.isCaretShown();
-      }
-
-      @Override
-      public boolean isFrozen() {
-        return isDisposed() || myDocument.isInBulkUpdate();
-      }
-
-      @Override
-      public long millisSinceActivity() {
-        return System.currentTimeMillis() - myCaretCursor.getStartTime();
-      }
-
-      @Override
-      public @NotNull CaretAnimationSettings settings() {
-        return EditorCaretAdapter.caretAnimationSettings(mySettings, shouldDisableAnimations());
-      }
-    };
-  }
-
-  boolean shouldDisableAnimations() {
+  @ApiStatus.Internal
+  public boolean shouldDisableAnimations() {
     return Registry.is("ui.simplified", false) ||
            PowerSaveMode.isEnabled() ||
            RemoteDesktopService.isRemoteSession();
@@ -3664,12 +3613,12 @@ public final class EditorImpl extends UserDataHolderBase implements EditorEx, Hi
 
   @Override
   public boolean setCaretVisible(boolean b) {
-    return EditorThreading.compute(() -> myCaretCursor.setVisible(b));
+    return EditorThreading.compute(() -> caretMutator.setVisible(b));
   }
 
   @Override
   public boolean setCaretEnabled(boolean enabled) {
-    return EditorThreading.compute(() -> myCaretCursor.setEnabled(enabled));
+    return EditorThreading.compute(() -> caretMutator.setEnabled(enabled));
   }
 
   @Override
@@ -3741,133 +3690,24 @@ public final class EditorImpl extends UserDataHolderBase implements EditorEx, Hi
     myPropertyChangeSupport.firePropertyChange(PROP_ONE_LINE_MODE, oldValue, event.getNewValue());
   }
 
-  final class CaretCursor {
-    private final Object myLock = new Object();
-
-    private CaretRectangle @NotNull [] myLocations = {CaretRectangle.PLACEHOLDER};
-    private boolean myEnabled = true;
-
-    private boolean myIsShown;
-    private float myBlinkOpacity = 1.0f;
-    private long myStartTime;
-
-    public boolean isEnabled() {
-      synchronized (myLock) {
-        return myEnabled;
+  private boolean isEditorInputFocusOwner() {
+    Component focusOwner = KeyboardFocusManager.getCurrentKeyboardFocusManager().getFocusOwner();
+    Component content = getContentComponent();
+    for (Component temp = focusOwner; temp != null; temp = temp instanceof Window ? null : temp.getParent()) {
+      if (temp == content) {
+        return true;
+      }
+      // check if hosted component is an input focus owner, in that case input focus belongs to hosted component instead of the editor
+      else if (temp instanceof EditorHostedComponent hostedComponent && hostedComponent.isInputFocusOwner()) {
+        return false;
       }
     }
-
-    public boolean setEnabled(boolean enabled) {
-      synchronized (myLock) {
-        boolean old = myEnabled;
-        myEnabled = enabled;
-        return old;
-      }
-    }
-
-    private boolean setVisible(boolean visible) {
-      synchronized (myLock) {
-        boolean old = myIsShown;
-        myIsShown = visible;
-
-        if (visible) {
-          myBlinkOpacity = 1.0f;
-          myStartTime = System.currentTimeMillis();
-        }
-
-        caretMutator.setBlinking(visible);
-        return old;
-      }
-    }
-
-    public boolean isActive() {
-      synchronized (myLock) {
-        return myIsShown;
-      }
-    }
-
-    void setFullOpacity() {
-      synchronized (myLock) {
-        myIsShown = true;
-        myBlinkOpacity = 1.0f;
-      }
-    }
-
-    float getBlinkOpacity() {
-      synchronized (myLock) {
-        return myBlinkOpacity;
-      }
-    }
-
-    void setBlinkOpacity(float opacity) {
-      synchronized (myLock) {
-        myBlinkOpacity = opacity;
-      }
-    }
-
-    long getStartTime() {
-      synchronized (myLock) {
-        return myStartTime;
-      }
-    }
-
-    void setStartTime(long startTime) {
-      synchronized (myLock) {
-        myStartTime = startTime;
-      }
-    }
-
-    void setPositions(CaretRectangle @NotNull [] locations) {
-      synchronized (myLock) {
-        myStartTime = System.currentTimeMillis();
-        myLocations = locations;
-      }
-    }
-
-    void repaint() {
-      myView.repaintCarets();
-    }
-
-    void repaint(CaretRectangle @NotNull [] locations) {
-      myView.repaintCarets(locations);
-    }
-
-    private boolean isEditorInputFocusOwner() {
-      Component focusOwner = KeyboardFocusManager.getCurrentKeyboardFocusManager().getFocusOwner();
-      Component content = getContentComponent();
-      for (Component temp = focusOwner; temp != null; temp = (temp instanceof Window) ? null : temp.getParent()) {
-        if (temp == content) {
-          return true;
-        }
-        // check if hosted component is an input focus owner, in that case input focus belongs to hosted component instead of the editor
-        else if (temp instanceof EditorHostedComponent hostedComponent && hostedComponent.isInputFocusOwner()) {
-          return false;
-        }
-      }
-      return false;
-    }
-
-    boolean isCaretShown() {
-      return isEnabled() && isActive() && !isRendererMode() && isEditorInputFocusOwner();
-    }
-
-    CaretRectangle @Nullable [] getCaretLocations(boolean onlyIfShown) {
-      if (onlyIfShown && !isCaretShown()) {
-        return null;
-      }
-      return locations();
-    }
-
-    CaretRectangle @NotNull [] locations() {
-      synchronized (myLock) {
-        return myLocations;
-      }
-    }
+    return false;
   }
 
   @ApiStatus.Internal
-  public float getCaretBlinkOpacity() {
-    return myCaretCursor.getBlinkOpacity();
+  public boolean isCaretShown(@NotNull CaretCursorSnapshot snapshot) {
+    return snapshot.getWantsToBeShown() && !isRendererMode() && isEditorInputFocusOwner();
   }
 
   private final class ScrollingTimer {
@@ -3910,7 +3750,7 @@ public final class EditorImpl extends UserDataHolderBase implements EditorEx, Hi
       }
 
 
-      myTimer = TimerUtil.createNamedTimer("Editor scroll timer", Registry.intValue("editor.scrolling.animation.interval.ms"), e -> {
+      myTimer = TimerUtil.createNamedTimer("Editor scroll timer", Registry.intValue("editor.scrolling.animation.interval.ms"), _ -> {
         if (isDisposed()) {
           stop();
           return;
@@ -3976,8 +3816,8 @@ public final class EditorImpl extends UserDataHolderBase implements EditorEx, Hi
   }
 
   private static void updateOpaque(@Nullable JScrollBar bar) {
-    if (bar instanceof OpaqueAwareScrollBar) {
-      bar.setOpaque(((OpaqueAwareScrollBar)bar).myOpaque);
+    if (bar instanceof OpaqueAwareScrollBar scrollBar) {
+      bar.setOpaque(scrollBar.myOpaque);
     }
   }
 
@@ -3992,7 +3832,7 @@ public final class EditorImpl extends UserDataHolderBase implements EditorEx, Hi
         }
         return getColorsScheme().getColor(key);
       });
-      addPropertyChangeListener("opaque", event -> {
+      addPropertyChangeListener("opaque", _ -> {
         revalidate();
         repaint();
       });
@@ -4038,8 +3878,8 @@ public final class EditorImpl extends UserDataHolderBase implements EditorEx, Hi
       ScrollBarUI barUI = getUI();
       Insets insets = getInsets();
       int top = Math.max(0, insets.top);
-      if (barUI instanceof ButtonlessScrollBarUI) {
-        return top + ((ButtonlessScrollBarUI)barUI).getDecrementButtonHeight();
+      if (barUI instanceof ButtonlessScrollBarUI scrollBarUI) {
+        return top + scrollBarUI.getDecrementButtonHeight();
       }
       if (barUI instanceof BasicScrollBarUI) {
         try {
@@ -4062,8 +3902,8 @@ public final class EditorImpl extends UserDataHolderBase implements EditorEx, Hi
     int getIncScrollButtonHeight() {
       ScrollBarUI barUI = getUI();
       Insets insets = getInsets();
-      if (barUI instanceof ButtonlessScrollBarUI) {
-        return insets.top + ((ButtonlessScrollBarUI)barUI).getIncrementButtonHeight();
+      if (barUI instanceof ButtonlessScrollBarUI scrollBarUI) {
+        return insets.top + scrollBarUI.getIncrementButtonHeight();
       }
       if (barUI instanceof BasicScrollBarUI) {
         try {
@@ -4096,8 +3936,8 @@ public final class EditorImpl extends UserDataHolderBase implements EditorEx, Hi
     }
 
     private void registerRepaintCallback(@Nullable ButtonlessScrollBarUI.ScrollbarRepaintCallback callback) {
-      if (myPersistentUI instanceof ButtonlessScrollBarUI) {
-        ((ButtonlessScrollBarUI)myPersistentUI).registerRepaintCallback(callback);
+      if (myPersistentUI instanceof ButtonlessScrollBarUI barUI) {
+        barUI.registerRepaintCallback(callback);
       }
     }
   }
@@ -4157,8 +3997,8 @@ public final class EditorImpl extends UserDataHolderBase implements EditorEx, Hi
       LOG.info("Skipping attempt to set color scheme without EditorColorsManager");
       return;
     }
-    if (scheme instanceof EditorColorSchemeDelegate) {
-      myScheme = (EditorColorSchemeDelegate)scheme;
+    if (scheme instanceof EditorColorSchemeDelegate delegate) {
+      myScheme = delegate;
     }
     else {
       myScheme = new EditorColorSchemeDelegate(this, scheme);
@@ -5032,7 +4872,7 @@ public final class EditorImpl extends UserDataHolderBase implements EditorEx, Hi
       if (isColumnMode()) {
         @NotNull List<CaretState> caretsAndSelections = getCaretModel().getCaretsAndSelections();
 
-        CaretState originalCaret = caretsAndSelections.get(0);
+        CaretState originalCaret = caretsAndSelections.getFirst();
         oldBlockStart = Objects.equals(originalCaret.getCaretPosition(), originalCaret.getSelectionEnd())
                         ? originalCaret.getSelectionStart()
                         : originalCaret.getSelectionEnd();
@@ -5085,7 +4925,7 @@ public final class EditorImpl extends UserDataHolderBase implements EditorEx, Hi
           }
         }
         else if (e.getSource() != myGutterComponent && isCreateRectangularSelectionEvent(e)) {
-          CaretState anchorCaretState = myCaretModel.getCaretsAndSelections().get(0);
+          CaretState anchorCaretState = myCaretModel.getCaretsAndSelections().getFirst();
           LogicalPosition anchor = Objects.equals(anchorCaretState.getCaretPosition(), anchorCaretState.getSelectionStart()) ?
                                    anchorCaretState.getSelectionEnd() : anchorCaretState.getSelectionStart();
           if (anchor == null) anchor = myCaretModel.getLogicalPosition();
@@ -5272,6 +5112,8 @@ public final class EditorImpl extends UserDataHolderBase implements EditorEx, Hi
       if (actionId.equals(mappedActionId)) continue;
       AnAction action = actionManager.getAction(mappedActionId);
       DataContext dataContext = DataManager.getInstance().getDataContext(e.getComponent());
+      // todo IJPL-255575 replace the deprecated factory with AnActionEvent.createEvent
+      //noinspection removal
       AnActionEvent actionEvent = AnActionEvent.createFromAnAction(action, e, ActionPlaces.MAIN_MENU, dataContext);
       ActionUtil.updateAction(action, actionEvent);
       if (actionEvent.getPresentation().isEnabled()) return false;
@@ -5409,8 +5251,8 @@ public final class EditorImpl extends UserDataHolderBase implements EditorEx, Hi
                       inlayCandidate.getPlacement() == Inlay.Placement.ABOVE_LINE) &&
                      inlayCandidate.getWidthInPixels() <= relX ? null : inlayCandidate;
     FoldRegion foldRegionCandidate = inEditingArea ? myFoldingModel.getFoldingPlaceholderAt(location, true) : null;
-    FoldRegion foldRegion = foldRegionCandidate instanceof CustomFoldRegion &&
-                            ((CustomFoldRegion)foldRegionCandidate).getWidthInPixels() <= relX ? null : foldRegionCandidate;
+    FoldRegion foldRegion = foldRegionCandidate instanceof CustomFoldRegion region &&
+                            region.getWidthInPixels() <= relX ? null : foldRegionCandidate;
     GutterIconRenderer gutterIconRenderer = inEditingArea ? null : myGutterComponent.getGutterRenderer(point);
     boolean overText = inlayCandidate == null &&
                        (foldRegionCandidate == null || foldRegion != null) &&
@@ -5489,8 +5331,8 @@ public final class EditorImpl extends UserDataHolderBase implements EditorEx, Hi
       try {
         if (t.isDataFlavorSupported(GutterDraggableObject.flavor)) {
           Object attachedObject = t.getTransferData(GutterDraggableObject.flavor);
-          if (attachedObject instanceof GutterIconRenderer) {
-            GutterDraggableObject object = ((GutterIconRenderer)attachedObject).getDraggableObject();
+          if (attachedObject instanceof GutterIconRenderer renderer) {
+            GutterDraggableObject object = renderer.getDraggableObject();
             if (object != null) {
               object.remove();
               Point mouseLocationOnScreen = MouseInfo.getPointerInfo().getLocation();
@@ -5502,7 +5344,7 @@ public final class EditorImpl extends UserDataHolderBase implements EditorEx, Hi
                 new Point(
                   mouseLocationOnScreen.x - editorComponentLocationOnScreen.x,
                   mouseLocationOnScreen.y - editorComponentLocationOnScreen.y
-                ), editor.myGutterComponent.getDragImage((GutterIconRenderer)attachedObject), painterListenersDisposable
+                ), editor.myGutterComponent.getDragImage(renderer), painterListenersDisposable
               );
               IdeGlassPaneUtil.installPainter(
                 editorComponent,
@@ -5552,8 +5394,8 @@ public final class EditorImpl extends UserDataHolderBase implements EditorEx, Hi
         editor.putUserData(LAST_PASTED_REGION, null);
 
         AnAction pasteAction = ActionManager.getInstance().getAction(IdeActions.ACTION_EDITOR_PASTE);
-        if (pasteAction instanceof EditorAction) {
-          EditorTextInsertHandler handler = ((EditorAction)pasteAction).getHandlerOfType(EditorTextInsertHandler.class);
+        if (pasteAction instanceof EditorAction action) {
+          EditorTextInsertHandler handler = action.getHandlerOfType(EditorTextInsertHandler.class);
           if (handler == null) {
             LOG.error("No suitable paste handler found");
           }
@@ -5726,7 +5568,7 @@ public final class EditorImpl extends UserDataHolderBase implements EditorEx, Hi
         // But settings for the file may have changed, so we must request the settings properly.
         // If the settings indeed need to be recomputed, the request will trigger a background computation.
         // Once that computation is finished, this method will be called again with eventSettings != null.
-        CodeStyle.getSettings(myProject, file);
+        CodeStyle.getSettings(myProject, Objects.requireNonNull(file));
       }
       if (eventSettings != null) {
         this.putUserData(CODE_STYLE_SETTINGS, eventSettings);
@@ -5835,7 +5677,7 @@ public final class EditorImpl extends UserDataHolderBase implements EditorEx, Hi
                                                 && !UISettings.getInstance().getPresentationMode();
           float shift = e.getWheelRotation();
 
-          var strategy = getUserData(ChangeEditorFontSizeStrategy.KEY);
+          ChangeEditorFontSizeStrategy strategy = getUserData(ChangeEditorFontSizeStrategy.KEY);
           if (strategy != null) {
             strategy.setFontSize(strategy.getFontSize() - shift);
             return;
@@ -6184,5 +6026,15 @@ public final class EditorImpl extends UserDataHolderBase implements EditorEx, Hi
   @ApiStatus.Internal
   public void throwEditorInvariantBroken(@NotNull String message) {
     throw new RuntimeExceptionWithAttachments(message, AttachmentFactory.createContext(dumpState()));
+  }
+
+  /**
+   * The scope is cancelled when this editor is released. A component that reads editor state from a coroutine still
+   * needs its own disposal guard, because cancellation does not wait for the running coroutines.
+   */
+  @ApiStatus.Internal
+  @Override
+  public @NotNull CoroutineScope getCoroutineScope() {
+    return myCoroutineScope;
   }
 }
