@@ -17,6 +17,7 @@ import com.intellij.openapi.editor.ex.RangeHighlighterEx;
 import com.intellij.openapi.editor.ex.util.EditorUIUtil;
 import com.intellij.openapi.editor.ex.util.EditorUtil;
 import com.intellij.openapi.editor.ex.util.LexerEditorHighlighter;
+import com.intellij.openapi.editor.impl.caret.model.CaretRepaintMetrics;
 import com.intellij.openapi.editor.impl.view.EditorPainter;
 import com.intellij.openapi.editor.impl.view.FontLayoutService;
 import com.intellij.openapi.editor.impl.view.IterationState;
@@ -43,6 +44,7 @@ import org.jetbrains.annotations.ApiStatus;
 import sun.awt.image.SunVolatileImage;
 
 import java.awt.geom.GeneralPath;
+import java.util.Objects;
 import java.util.function.Consumer;
 
 import javax.swing.JComponent;
@@ -100,7 +102,7 @@ public final class ImmediatePainter {
       final List<EditorActionPlan.Replacement> replacements = plan.getReplacements();
       if (replacements.size() != 1) return false;
 
-      final EditorActionPlan.Replacement replacement = replacements.get(0);
+      final EditorActionPlan.Replacement replacement = replacements.getFirst();
       if (replacement.getText().length() != 1) return false;
 
       final int caretOffset = replacement.getBegin();
@@ -152,22 +154,23 @@ public final class ImmediatePainter {
     });
   }
 
+  /// @noinspection GraphicsSetClipInspection
   private void paintImmediately(final Graphics2D g, final int offset, final char c2) {
-    final EditorImpl editor = myEditor;
-    final Document document = editor.getElfDocument();
-    final LexerEditorHighlighter highlighter = (LexerEditorHighlighter)myEditor.getHighlighter();
+    EditorImpl editor = myEditor;
+    Document document = editor.getElfDocument();
+    LexerEditorHighlighter highlighter = (LexerEditorHighlighter)myEditor.getHighlighter();
+    EditorSettings settings = editor.getSettings();
+    boolean isBlockCursor = editor.isInsertMode() == settings.isBlockCursor();
+    boolean isSmoothCaretMovement = editor.getSettings().isSmoothCaretMovement();
+    int lineHeight = editor.getLineHeight();
+    int ascent = editor.getAscent();
+    CaretRepaintMetrics metrics = editor.myView.getCaretRepaintMetrics();
+    int caretHeight = metrics.caretHeight;
+    int topOverhang = metrics.topOverhang;
 
-    final EditorSettings settings = editor.getSettings();
-    final boolean isBlockCursor = editor.isInsertMode() == settings.isBlockCursor();
-    final boolean isSmoothCaretMovement = editor.getSettings().isSmoothCaretMovement();
-    final int lineHeight = editor.getLineHeight();
-    final int caretHeight = editor.myView.getCaretHeight();
-    final int ascent = editor.getAscent();
-    final int topOverhang = settings.isFullLineHeightCursor() ? 0 : editor.myView.getTopOverhang();
+    char c1 = offset == 0 ? ' ' : document.getImmutableCharSequence().charAt(offset - 1);
 
-    final char c1 = offset == 0 ? ' ' : document.getCharsSequence().charAt(offset - 1);
-
-    final List<TextAttributes> attributes;
+    List<TextAttributes> attributes;
     try {
       attributes = highlighter.getAttributesForPreviousAndTypedChars(document, offset, c2);
     }
@@ -309,14 +312,14 @@ public final class ImmediatePainter {
 
   private static boolean isImageValid(VolatileImage image, Component component) {
     GraphicsConfiguration componentConfig = component.getGraphicsConfiguration();
-    if (SystemInfo.isWindows && image instanceof SunVolatileImage) { // JBR-1540
-      GraphicsConfiguration imageConfig = ((SunVolatileImage)image).getGraphicsConfig();
+    if (SystemInfo.isWindows && image instanceof SunVolatileImage volatileImage) { // JBR-1540
+      GraphicsConfiguration imageConfig = volatileImage.getGraphicsConfig();
       if (imageConfig != null && componentConfig != null && imageConfig.getDevice() != componentConfig.getDevice()) return false;
     }
     return image.validate(componentConfig) != VolatileImage.IMAGE_INCOMPATIBLE;
   }
 
-  private void paintCaretBar(final Graphics2D g, final Rectangle2D r, final Color color) {
+  private static void paintCaretBar(final Graphics2D g, final Rectangle2D r, final Color color) {
     double w = r.getWidth(), h = r.getHeight();
     double x = r.getX(), y = r.getY();
 
@@ -406,7 +409,6 @@ public final class ImmediatePainter {
 
     final int size = highlighters.size();
 
-    //noinspection ForLoopReplaceableByForEach
     for (int i = 0; i < size; i++) {
       RangeHighlighterEx highlighter = highlighters.get(i);
       if (highlighter.getTextAttributes(editor.getColorsScheme()) == TextAttributes.ERASE_MARKER) {
@@ -416,7 +418,6 @@ public final class ImmediatePainter {
 
     final List<TextAttributes> cachedAttributes = new ArrayList<>();
 
-    //noinspection ForLoopReplaceableByForEach
     for (int i = 0; i < size; i++) {
       RangeHighlighterEx highlighter = highlighters.get(i);
 
@@ -445,7 +446,6 @@ public final class ImmediatePainter {
     EffectType effectType = null;
     int fontType = 0;
 
-    //noinspection ForLoopReplaceableByForEach, Duplicates
     for (int i = 0; i < cachedAttributes.size(); i++) {
       TextAttributes attrs = cachedAttributes.get(i);
 
@@ -473,7 +473,7 @@ public final class ImmediatePainter {
     TextAttributes defaultAttributes = editor.getColorsScheme().getAttributes(HighlighterColors.TEXT);
     if (fontType == Font.PLAIN) fontType = defaultAttributes == null ? Font.PLAIN : defaultAttributes.getFontType();
 
-    attributes.setAttributes(foreground, background, effect, null, effectType, fontType);
+    Objects.requireNonNull(attributes).setAttributes(foreground, background, effect, null, effectType, fontType);
   }
 
   private static void pause() {
